absolute URLs for images
Changing URLs to absolute so that labs and other sites can find
appropriate images (esp. for Colorbox controls) when using this theme.

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: https://education.wsu.edu/
 Author: WSU University Communications
 Author URI: https://web.wsu.edu/
 Description: Child theme of WSU Spine for use by the WSU College of Education.
-Version: 0.1.9
+Version: 0.1.10
 License: GNU General Public License v2 or later
 License URI: https://www.gnu.org/licenses/gpl-2.0.html
 Tags: light
@@ -825,19 +825,19 @@ small {
 }
 
 .explore:after {
-	content: url("/wp-content/uploads/sites/90/2015/08/explore-blue.png");
+	content: url("https://education.wsu.edu/wp-content/uploads/sites/90/2015/08/explore-blue.png");
 }
 
 .press_play:after {
-	content: url("/wp-content/uploads/sites/90/2015/08/play-blue.png");
+	content: url("https://education.wsu.edu/wp-content/uploads/sites/90/2015/08/play-blue.png");
 }
 
 .socialize:after {
-	content: url("/wp-content/uploads/sites/90/2015/08/socialize-blue.png");
+	content: url("https://education.wsu.edu/wp-content/uploads/sites/90/2015/08/socialize-blue.png");
 }
 
 .upcoming:after {
-	content: url("/wp-content/uploads/sites/90/2015/08/upcoming-blue.png");
+	content: url("https://education.wsu.edu/wp-content/uploads/sites/90/2015/08/upcoming-blue.png");
 }
 
 /* socialize buttons */
@@ -926,7 +926,7 @@ body.wsu-palette-orange .row2 {
 
 .error404 main {	
 	text-align: center !important;
-	background: url("/wp-content/uploads/sites/90/2015/09/404-campus.jpg") no-repeat center center fixed; 
+	background: url("https://education.wsu.edu/wp-content/uploads/sites/90/2015/09/404-campus.jpg") no-repeat center center fixed; 
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
@@ -935,7 +935,7 @@ body.wsu-palette-orange .row2 {
 
 .error404 .size-lt-smallish main {	
 	text-align: center !important;
-	background: url("/wp-content/uploads/sites/90/2015/09/404-campus-mobile.jpg") no-repeat center center fixed; 
+	background: url("https://education.wsu.edu/wp-content/uploads/sites/90/2015/09/404-campus-mobile.jpg") no-repeat center center fixed; 
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
@@ -1341,7 +1341,7 @@ body:not(.unset) .tablepress-responsive-all th:first-child {
 hr.divider,
 .page-id-4136 #cboxLoadedContent > div > hr.divider {
 	height: 6px;
-	background: url(/wp-content/uploads/sites/90/2015/08/diagonal-divider.png) repeat-x 0 0;
+	background: url("https://education.wsu.edu/wp-content/uploads/sites/90/2015/08/diagonal-divider.png") repeat-x 0 0;
     border: 0;
 	margin-top: 2rem;
 	margin-bottom: 3rem;
@@ -1433,9 +1433,9 @@ p img {
         #cboxPrevious:active, #cboxNext:active, #cboxSlideshow:active, #cboxClose:active {outline:0;}
         
         #cboxSlideshow{position:absolute; top:-20px; right:90px; color:#fff;}
-        #cboxPrevious{position:absolute; top:50%; left:5px; margin-top:-32px; background:url(/wp-content/uploads/sites/90/2015/08/controls.png) no-repeat top left; width:28px; height:65px; text-indent:-9999px;}
+        #cboxPrevious{position:absolute; top:50%; left:5px; margin-top:-32px; background:url("https://education.wsu.edu/wp-content/uploads/sites/90/2015/08/controls.png") no-repeat top left; width:28px; height:65px; text-indent:-9999px;}
         #cboxPrevious:hover{background-position:bottom left;}
-        #cboxNext{position:absolute; top:50%; right:5px; margin-top:-32px; background:url(/wp-content/uploads/sites/90/2015/08/controls.png) no-repeat top right; width:28px; height:65px; text-indent:-9999px;}
+        #cboxNext{position:absolute; top:50%; right:5px; margin-top:-32px; background:url("https://education.wsu.edu/wp-content/uploads/sites/90/2015/08/controls.png") no-repeat top right; width:28px; height:65px; text-indent:-9999px;}
         #cboxNext:hover{background-position:bottom right;}
-        #cboxClose{position:absolute; top:10px; right:5px; display:block; background:url(/wp-content/uploads/sites/90/2015/08/controls.png) no-repeat top center; width:38px; height:19px; text-indent:-9999px;}
+        #cboxClose{position:absolute; top:10px; right:5px; display:block; background:url("https://education.wsu.edu/wp-content/uploads/sites/90/2015/08/controls.png") no-repeat top center; width:38px; height:19px; text-indent:-9999px;}
         #cboxClose:hover{background-position: center -25px;}
